tests/ui/unrecognized_receiver.stderr
error: unrecognized receiver type
 --> $DIR/tests/ui/unrecognized_receiver.rs:4:20
  |
4 |         fn f(self: &Unrecognized);
  |                    ^^^^^^^^^^^^^
